Fixed bug #47141 - Unable to fetch error messages after the database can't be opened.